# aletheia-dac

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IEEEtran.cls  LICENSE  README.md  ROADMAP.md  SECURITY.md  Specification.md  acceptance_tests.py  dac.py  n8n_workflow.json  pyproject.toml  references.bib  service.py
docs/: Specification.md
paper/: references.bib
src/aletheia/: cli.py  dac.py  oscal.py
tests/: test_acceptance.py
