[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia-dac"
version = "0.1.0"
description = "Drift-Aware Claim (DAC) substrate: portable provenance + calibrated confidence + drift-triggered invalidation across the stack."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "A. Khaalis Wooden, Sr." }]
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "cryptography>=41",
]

[project.optional-dependencies]
service = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2"]
dev = ["pytest>=7"]

[project.scripts]
aletheia = "aletheia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
